Upgrade gradle, Dockerfile tweaks, pipeline work